--- a/power/src/app/fragebogen/details/details.component.html
+++ b/power/src/app/fragebogen/details/details.component.html
@@ -1,88 +1,171 @@
 <!-- details page -->
 <main class="mainpage p-1 p-lg-3" id="content" tabindex="-1">
-	<!-- title -->
-	<h4 *ngIf="storage.form">{{ storage.form.title }}</h4>
+    <!-- title -->
+    <div class="h4" *ngIf="storage.form">
+        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-file-earmark-medical align-baseline" fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+            <path d="M4 1h5v1H4a1 1 0 0 0-1 1v10a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V6h1v7a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2z"/>
+            <path d="M9 4.5V1l5 5h-3.5A1.5 1.5 0 0 1 9 4.5z"/>
+            <path fill-rule="evenodd" d="M7 4a.5.5 0 0 1 .5.5v.634l.549-.317a.5.5 0 1 1 .5.866L8 6l.549.317a.5.5 0 1 1-.5.866L7.5 6.866V7.5a.5.5 0 0 1-1 0v-.634l-.549.317a.5.5 0 1 1-.5-.866L6 6l-.549-.317a.5.5 0 0 1 .5-.866l.549.317V4.5A.5.5 0 0 1 7 4zM5 9.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm0 2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z"/>
+        </svg>
+        {{ storage.form.title }}
+    </div>
 
-	<!-- form details -->
-	<div class="row m-0 mb-3" *ngIf="storage.form">
-		<div class="col-12 col-md-6 pl-0">
-			ID: {{ storage.form.id }}
-			<br>Tags: {{ storage.form.tags }}
-		</div>
-		<div class="col-12 col-md-6 pl-0">
-			Erstellt: {{ storage.form.created | date:'dd.MM.yyyy HH:mm:ss' }}
-		</div>
-		<div class="col-12 pl-0 pt-2">
-			<button type="button" class="btn btn-primary btn-sm mr-2" title="Formular bearbeiten"
-					[routerLink]="['/forms/editor', storage.form.id]">
-              <i class="fa fa-edit fa-fw" aria-hidden="true"></i>
-              Bearbeiten
-			</button>
-<!--      TODO: Menu für die Auswahl des Access-Mode (Public, Pin6, Pin6Factor, Pin8...)-->
-      <button type="button" class="btn btn-primary btn-sm mr-2" title="Formular veröffentlichen"
-              (click)="publishFormPin6()">
-        <i class="fa fa-arrow-up fa-fw" aria-hidden="true"></i>
-              Veröffentlichen (Pin6)
-      </button>
-      <button type="button" class="btn btn-danger btn-sm" title="Formular löschen"
-					(click)="deleteForm()">
-              <i class="fa fa-trash fa-fw" aria-hidden="true"></i>
-              Löschen
-      </button>
-		</div>
-	</div>
+    <!-- form details -->
+    <div class="row m-0 mb-3" *ngIf="storage.form">
+        <div class="col-12 col-md-6 pl-0">
+            <p class="font-weight-light mb-1">
+                ID: {{ storage.form.id }}
+            </p>
+            <p class="font-weight-light mb-1">
+                Erstellt: {{ storage.form.created | date:'dd.MM.yyyy HH:mm:ss' }}
+            </p>
+            <p class="font-weight-light mb-1" *ngIf="storage.form.published">
+                Veröffentlicht: {{ storage.form.published | date:'dd.MM.yyyy HH:mm:ss' }}
+            </p>
+            <p class="font-weight-light mb-1" *ngIf="storage.form.cancelled">
+                Archiviert: {{ storage.form.cancelled | date:'dd.MM.yyyy HH:mm:ss' }}
+            </p>
+            <p class="font-weight-light mb-1" *ngIf="storage.form && storage.form.status === 'published'">
+                Zugriff: {{ storage.form.access }}
+            </p>
+            <!--<p class="font-weight-light mb-1" *ngIf="storage.form && storage.form.status === 'published'">
+                Zugriffszeit: {{ storage.form['access-minutes'] }} Minuten
+            </p>-->
+        </div>
+        <div class="col-12 col-md-6 pl-0">
+            <p class="font-weight-light mb-1">
+                Status: {{ storage.form.status }}
+            </p>
+            <p class="font-weight-light mb-1">
+                Besitzer: {{ storage.form.owners }}
+            </p>
+            <p class="font-weight-light mb-1">
+                Leser: {{ storage.form.readers }}
+            </p>
+            <p class="font-weight-light mb-1">
+                Tags: {{ storage.form.tags }}
+            </p>
+        </div>
+        <div class="col-12 pl-0 pt-2">
+            <button type="button"
+                    class="btn btn-primary btn-sm mr-2"
+                    title="Formular bearbeiten"
+                    [routerLink]="['/forms/editor', storage.form.id]"
+                    *ngIf="storage.form && storage.form.status === 'created'">
+                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-pencil-square align-baseline" fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                    <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456l-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+                    <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
+                </svg>
+                Bearbeiten
+            </button>
+            <button type="button"
+                    class="btn btn-primary btn-sm mr-2"
+                    title="Formular Vorschau"
+                    (click)="preview.Toggle()">
+                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrows-fullscreen align-baseline" fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                    <path fill-rule="evenodd" d="M1.464 10.536a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3.5a.5.5 0 0 1-.5-.5v-3.5a.5.5 0 0 1 .5-.5z"/>
+                    <path fill-rule="evenodd" d="M5.964 10a.5.5 0 0 1 0 .707l-4.146 4.147a.5.5 0 0 1-.707-.708L5.257 10a.5.5 0 0 1 .707 0zm8.854-8.854a.5.5 0 0 1 0 .708L10.672 6a.5.5 0 0 1-.708-.707l4.147-4.147a.5.5 0 0 1 .707 0z"/>
+                    <path fill-rule="evenodd" d="M10.5 1.5A.5.5 0 0 1 11 1h3.5a.5.5 0 0 1 .5.5V5a.5.5 0 0 1-1 0V2h-3a.5.5 0 0 1-.5-.5zm4 9a.5.5 0 0 0-.5.5v3h-3a.5.5 0 0 0 0 1h3.5a.5.5 0 0 0 .5-.5V11a.5.5 0 0 0-.5-.5z"/>
+                    <path fill-rule="evenodd" d="M10 9.964a.5.5 0 0 0 0 .708l4.146 4.146a.5.5 0 0 0 .708-.707l-4.147-4.147a.5.5 0 0 0-.707 0zM1.182 1.146a.5.5 0 0 0 0 .708L5.328 6a.5.5 0 0 0 .708-.707L1.889 1.146a.5.5 0 0 0-.707 0z"/>
+                    <path fill-rule="evenodd" d="M5.5 1.5A.5.5 0 0 0 5 1H1.5a.5.5 0 0 0-.5.5V5a.5.5 0 0 0 1 0V2h3a.5.5 0 0 0 .5-.5z"/>
+                </svg>
+                Vorschau
+            </button>
+            <button type="button"
+                    class="btn btn-success btn-sm mr-2"
+                    title="Formular veröffentlichen"
+                    (click)="publish.open()"
+                    *ngIf="storage.form && storage.form.status === 'created'">
+                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-globe2 align-baseline" fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                    <path fill-rule="evenodd" d="M1.018 7.5h2.49c.037-1.07.189-2.087.437-3.008a9.124 9.124 0 0 1-1.565-.667A6.964 6.964 0 0 0 1.018 7.5zM3.05 3.049c.362.184.763.349 1.198.49.142-.384.304-.744.481-1.078a6.7 6.7 0 0 1 .597-.933A7.01 7.01 0 0 0 3.051 3.05zM8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0zm-.5 1.077c-.67.204-1.335.82-1.887 1.855-.143.268-.276.56-.395.872.705.157 1.473.257 2.282.287V1.077zm0 4.014c-.91-.03-1.783-.145-2.591-.332a12.344 12.344 0 0 0-.4 2.741H7.5V5.091zm1 2.409V5.091c.91-.03 1.783-.145 2.591-.332.223.827.364 1.754.4 2.741H8.5zm-1 1H4.51c.035.987.176 1.914.399 2.741A13.596 13.596 0 0 1 7.5 10.91V8.5zm1 2.409V8.5h2.99a12.343 12.343 0 0 1-.399 2.741A13.596 13.596 0 0 0 8.5 10.91zm-1 1c-.81.03-1.577.13-2.282.287.12.312.252.604.395.872.552 1.035 1.218 1.65 1.887 1.855V11.91zm-2.173 2.563a6.695 6.695 0 0 1-.597-.933 8.857 8.857 0 0 1-.481-1.078 8.356 8.356 0 0 0-1.198.49 7.01 7.01 0 0 0 2.276 1.52zM2.38 12.175c.47-.258.995-.482 1.565-.667A13.36 13.36 0 0 1 3.508 8.5h-2.49a6.964 6.964 0 0 0 1.362 3.675zm8.293 2.297a7.01 7.01 0 0 0 2.275-1.521 8.353 8.353 0 0 0-1.197-.49 8.859 8.859 0 0 1-.481 1.078 6.688 6.688 0 0 1-.597.933zm.11-2.276A12.63 12.63 0 0 0 8.5 11.91v3.014c.67-.204 1.335-.82 1.887-1.855.143-.268.276-.56.395-.872zm1.272-.688c.57.185 1.095.409 1.565.667A6.964 6.964 0 0 0 14.982 8.5h-2.49a13.355 13.355 0 0 1-.437 3.008zm.437-4.008h2.49a6.963 6.963 0 0 0-1.362-3.675c-.47.258-.995.482-1.565.667.248.92.4 1.938.437 3.008zm-.74-3.96a8.854 8.854 0 0 0-.482-1.079 6.692 6.692 0 0 0-.597-.933c.857.355 1.63.875 2.275 1.521a8.368 8.368 0 0 1-1.197.49zm-.97.264c-.705.157-1.473.257-2.282.287V1.077c.67.204 1.335.82 1.887 1.855.143.268.276.56.395.872z"/>
+                </svg>
+                Veröffentlichen
+            </button>
+            <button type="button"
+                    class="btn btn-secondary btn-sm mr-2"
+                    title="Formular archivieren"
+                    (click)="archiveForm()"
+                    *ngIf="storage.form && storage.form.status === 'published'">
+                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-archive-fill align-baseline" fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                    <path fill-rule="evenodd" d="M12.643 15C13.979 15 15 13.845 15 12.5V5H1v7.5C1 13.845 2.021 15 3.357 15h9.286zM6 7a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1H6zM.8 1a.8.8 0 0 0-.8.8V3a.8.8 0 0 0 .8.8h14.4A.8.8 0 0 0 16 3V1.8a.8.8 0 0 0-.8-.8H.8z"/>
+                </svg>
+                Archivieren
+            </button>
+            <button type="button"
+                    class="btn btn-danger btn-sm"
+                    title="Formular löschen"
+                    (click)="deleteForm()"
+                    *ngIf="storage.form && storage.form.status !== 'published'">
+                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-trash-fill align-baseline" fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                    <path fill-rule="evenodd" d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5a.5.5 0 0 0-1 0v7a.5.5 0 0 0 1 0v-7z"/>
+                </svg>
+                Löschen
+            </button>
+        </div>
+    </div>
 
-  <!--      TODO: Hide List if form is not published yet and has a Public-Access-Mode-->
-
-	<!-- tasks list -->
-	<div class="card bg-light">
-		<div class="card-header h5">
-			<i class="fas fa-list fa-fw" aria-hidden="true"></i>
-			Antworten
-		</div>
-		<div class="card-body table-responsive p-0">
-			<table class="table table-hover m-0">
-				<thead>
-					<tr>
-            <th scope="col" class="border-top-0">ID</th>
-						<th scope="col" class="border-top-0">PIN</th>
-						<th scope="col" class="border-top-0">Abgeschlossen</th>
-            <th scope="col" class="border-top-0">In Bearbeitung</th>
-						<th scope="col" class="border-top-0">Erstellt</th>
-						<th scope="col" class="border-top-0 w-50"></th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr *ngFor="let task of storage.tasksList; index as i">
-            <td>{{ task.id }}</td>
-						<td scope="row">
-							<a [routerLink]="['/forms/fillout', task.pin]">{{ task.pin }}</a>
-						</td>
-						<td>{{ task.submitted | date:'dd.MM.yyyy HH:mm' }}</td>
-            <td>{{ task.accessed | date:'dd.MM.yyyy HH:mm' }}</td>
-						<td>{{ task.created | date:'dd.MM.yyyy HH:mm' }}</td>
-						<td>
-							<button type="button" class="btn btn-danger btn-sm" id="button-delete" title="Antwort löschen"
-									(click)="deleteTask(i)">
-							<i class="fa fa-trash fa-fw" aria-hidden="true"></i>
-							Löschen
-							</button>
-						</td>
-					</tr>
-				</tbody>
-			</table>
-			<span class="m-3" *ngIf="!storage.tasksList.length">Keine Antworten gefunden</span>
-		</div>
-		<div class="card-footer">
-		<button type="button"
-				class="btn btn-success btn-sm mr-2"
-				title="Neue PIN erstellen"
-				(click)="maketask.open()">
-			<i class="fas fa-plus fa-fw" aria-hidden="true"></i>
-			Neue PIN erstellen
-		</button>
-		</div>
-	</div>
+    <!-- tasks list -->
+    <div class="card bg-light" *ngIf="storage.form && storage.form.status !== 'created'">
+        <div class="card-header h5">
+            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-list-ul" fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                <path fill-rule="evenodd" d="M5 11.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zm-3 1a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm0 4a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm0 4a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
+            </svg>
+            Antworten
+        </div>
+        <div class="card-body table-responsive p-0">
+            <table class="table table-hover m-0">
+                <thead>
+                    <tr>
+                        <th scope="col" class="border-top-0">ID</th>
+                        <th scope="col" class="border-top-0">PIN</th>
+                        <th scope="col" class="border-top-0">Abgeschlossen</th>
+                        <th scope="col" class="border-top-0">In Bearbeitung</th>
+                        <th scope="col" class="border-top-0">Erstellt</th>
+                        <th scope="col" class="border-top-0 w-50"></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let task of storage.tasksList; index as i">
+                        <td>{{ task.id }}</td>
+                        <td>
+                            <a [routerLink]="['/forms/fillout', task.pin]">{{ task.pin }}</a>
+                        </td>
+                        <td>{{ task.submitted | date:'dd.MM.yyyy HH:mm' }}</td>
+                        <td>{{ task.accessed | date:'dd.MM.yyyy HH:mm' }}</td>
+                        <td>{{ task.created | date:'dd.MM.yyyy HH:mm' }}</td>
+                        <td>
+                            <button type="button" class="btn btn-danger btn-sm" id="button-delete" title="Antwort löschen"
+                                    (click)="deleteTask(i)">
+                            <i class="fa fa-trash fa-fw" aria-hidden="true"></i>
+                            Löschen
+                            </button>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+            <span class="m-3" *ngIf="!storage.tasksList.length">Keine Antworten vorhanden</span>
+        </div>
+        <div class="card-footer">
+        <button type="button"
+                class="btn btn-success btn-sm mr-2"
+                title="Neue PIN erstellen"
+                (click)="maketask.open()"
+                *ngIf="storage.form && storage.form.status === 'published'">
+            <svg width="1.5em" height="1.5em" viewBox="0 0 16 16" class="bi bi-plus align-top" fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                <path fill-rule="evenodd" d="M8 3.5a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-.5.5H4a.5.5 0 0 1 0-1h3.5V4a.5.5 0 0 1 .5-.5z"/>
+                <path fill-rule="evenodd" d="M7.5 8a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1H8.5V12a.5.5 0 0 1-1 0V8z"/>
+            </svg>
+            Neue PIN erstellen
+        </button>
+        </div>
+    </div>
 </main>
 
+<!-- new task modal -->
 <power-formulars-details-maketask #maketask></power-formulars-details-maketask>
+
+<!-- publish modal -->
+<power-formulars-details-publish #publish></power-formulars-details-publish>
+
+<!-- preview modal -->
+<power-formulars-surveyjs-preview *ngIf="storage.form" [form]="storage.form.content" #preview></power-formulars-surveyjs-preview>
