--- a/power/src/app/fragebogen/editor/editor.component.html
+++ b/power/src/app/fragebogen/editor/editor.component.html
@@ -3,14 +3,14 @@
     <div class="col-12 col-lg-3 col-xl-2 p-0 pr-lg-2 mb-2">
         <!-- toolbox -->
         <div class="card bg-light">
-            <div class="card-header h5">
+            <div class="card-header h5 clickable" (click)="isCollapsedToolBox = !isCollapsedToolBox">
                 <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-tools align-baseline" fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
                     <path fill-rule="evenodd" d="M0 1l1-1 3.081 2.2a1 1 0 0 1 .419.815v.07a1 1 0 0 0 .293.708L10.5 9.5l.914-.305a1 1 0 0 1 1.023.242l3.356 3.356a1 1 0 0 1 0 1.414l-1.586 1.586a1 1 0 0 1-1.414 0l-3.356-3.356a1 1 0 0 1-.242-1.023L9.5 10.5 3.793 4.793a1 1 0 0 0-.707-.293h-.071a1 1 0 0 1-.814-.419L0 1zm11.354 9.646a.5.5 0 0 0-.708.708l3 3a.5.5 0 0 0 .708-.708l-3-3z"/>
                     <path fill-rule="evenodd" d="M15.898 2.223a3.003 3.003 0 0 1-3.679 3.674L5.878 12.15a3 3 0 1 1-2.027-2.027l6.252-6.341A3 3 0 0 1 13.778.1l-2.142 2.142L12 4l1.757.364 2.141-2.141zm-13.37 9.019L3.001 11l.471.242.529.026.287.445.445.287.026.529L5 13l-.242.471-.026.529-.445.287-.287.445-.529.026L3 15l-.471-.242L2 14.732l-.287-.445L1.268 14l-.026-.529L1 13l.242-.471.026-.529.445-.287.287-.445.529-.026z"/>
                 </svg>
                 Toolbox
             </div>
-            <ul id="toolbox" class="list-group list-group-flush">
+            <ul id="toolbox" class="list-group list-group-flush" [collapse]="isCollapsedToolBox" [isAnimated]="true">
                 <smooth-dnd-container groupName="toolbox"
                     [getChildPayload]="getPayloadToolbox"
                     behaviour="copy">
@@ -84,7 +84,7 @@
                     class="btn btn-secondary mr-2"
                     title="Letzte Änderung wiederholen"
                     (click)="history.redoChanges()"
-                    [disabled]="history.redoIndex === 0">
+                    [disabled]="history.redoBuffer.length === 0">
                     <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-clockwise align-baseline" fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
                         <path fill-rule="evenodd" d="M3.17 6.706a5 5 0 0 1 7.103-3.16.5.5 0 1 0 .454-.892A6 6 0 1 0 13.455 5.5a.5.5 0 0 0-.91.417 5 5 0 1 1-9.375.789z"/>
                         <path fill-rule="evenodd" d="M8.147.146a.5.5 0 0 1 .707 0l2.5 2.5a.5.5 0 0 1 0 .708l-2.5 2.5a.5.5 0 1 1-.707-.708L10.293 3 8.147.854a.5.5 0 0 1 0-.708z"/>
@@ -95,7 +95,7 @@
                     class="btn btn-secondary mr-2"
                     title="Letzte Änderung rückgängig machen"
                     (click)="history.undoChanges()"
-                    [disabled]="history.undoIndex === 0">
+                    [disabled]="history.undoBuffer.length === 0">
                     <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-counterclockwise align-baseline" fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
                         <path fill-rule="evenodd" d="M12.83 6.706a5 5 0 0 0-7.103-3.16.5.5 0 1 1-.454-.892A6 6 0 1 1 2.545 5.5a.5.5 0 1 1 .91.417 5 5 0 1 0 9.375.789z"/>
                         <path fill-rule="evenodd" d="M7.854.146a.5.5 0 0 0-.708 0l-2.5 2.5a.5.5 0 0 0 0 .708l2.5 2.5a.5.5 0 1 0 .708-.708L5.707 3 7.854.854a.5.5 0 0 0 0-.708z"/>
